2016-05-03 18:00-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Modules/Debuggers/ProjectCenter/PCDebugger.m
	* Modules/Debuggers/ProjectCenter/PCDebuggerView.m
	* Modules/Debuggers/ProjectCenter/PipeDelegate.m: Changes
	to allow pid to be passed back to PCDebugger by calling
	setSubProcessId once the pid is parsed from the mi output.

2016-05-03 Riccardo Mottola <rm@gnu.org>

	* Modules/Debuggers/ProjectCenter/PCDebugger.h
	* Modules/Debuggers/ProjectCenter/PCDebugger.m
	Refactor path to executablePath.

	* Modules/Debuggers/ProjectCenter/PipeDelegate.m
	Do not permit deletion beyond the new line or the gdb prompt.

2016-03-23 Riccardo Mottola <rm@gnu.org>

	* Modules/Debuggers/ProjectCenter/PCDebugger.m
	* Modules/Debuggers/ProjectCenter/PCDebuggerView.h
	* Modules/Debuggers/ProjectCenter/PCDebuggerView.m
	* Modules/Debuggers/ProjectCenter/PipeDelegate.h
	* Modules/Debuggers/ProjectCenter/PipeDelegate.m
	* Modules/Debuggers/ProjectCenter/PCDebuggerViewDelegateProtocol.h
	Merge in from pipes branch: stdio/stdout over pipes handled in a separate delegate class.

2016-03-23 Riccardo Mottola <rm@gnu.org>

	* Framework/PCBundleManager.m
	* Framework/PCProjectLauncher.m
	Merge from branch: check bundle loading and warn.

2016-03-15 18:47-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Modules/Debuggers/ProjectCenter/PTYView.h
	* Modules/Debuggers/ProjectCenter/PTYView.m:
	Undo previous change.  Move Riccardo's change to
	branch ptyview_with_pipes.

2016-03-14 Riccardo Mottola <rm@gnu.org>

	* Modules/Debuggers/ProjectCenter/PTYView.h
	* Modules/Debuggers/ProjectCenter/PTYView.m
	Use stdio/stdout over pipes instead of a tty

2016-03-08 Riccardo Mottola <rm@gnu.org>

	* Framework/PCProjectLauncher.m
	Update debug executable path search to run, make it work on windows.

2015-11-09 Riccardo Mottola <rm@gnu.org>

	* Framework/PCProjectInspector.m
	Allocate a Mutable Array before assagning an Array to a MutableArray
